--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
     <h1>Lottermail</h1>
     <p>Enter your email and the value of the jackpot you want to be notified at.
       If the jackpot gets at or above the value you enter, we'll send you an email.
-      Feel free to opt out any time.
+      Feel free to opt out any time. Right now we only look at Mega Millions, but
+      PowerBall is soon to come.
     </p>
     <form action="{{ url_for('add_email') }}" method=post>
       <dl>
