confirm message and use environ

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
       If the jackpot gets at or above the value you enter, we'll send you an email.
       Feel free to opt out any time. Right now we only look at Mega Millions, but
       PowerBall is soon to come.
+      <br><br>
+      By filling out and submitting this form, you consent to receiving emails from our web service.
     </p>
     <form action="{{ url_for('add_email') }}" method=post>
       <dl>
